--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         </nav>
     </header>
 
+    
+
     <section class="home">
-        <h1>Welcome to <span>elephant thoughts.</span></h1>
+        <h1 id="typewriter">Welcome to <span>elephant thoughts.</span></h1>
     </section>
 
     <section class="about-us">
@@ -86,11 +88,11 @@
             <p>02/19/24</p>
             <span>12pm-5pm</span>
         </div>
-
+        
         <div class="friday">
             <h3>friday</h3>
             <p>02/19/24</p>
-            <span>12pm-5pm</span>
+            <span>12pm-5pm</span>  
         </div>
     </section>
 
@@ -100,5 +102,6 @@
         <p href="https://www.facebook.com/profile.php?id=61552964511090">Jolyssa</p>
     </section>
 
+    <script src="/js/main.js"></script>
 </body>
 </html>
