--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elephant Thoughts</title>
+    <link rel="stylesheet" href="css/style.css"
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -25,10 +26,8 @@
         </nav>
     </header>
 
-    
-
-    <section class="home">
-        <h1 id="typewriter">Welcome to <span>elephant thoughts.</span></h1>
+    <section class="home" id="typewriter">
+        <h1></h1>
     </section>
 
     <section class="about-us">
