where -> where r we located in html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="about-us-desc-2">
             <p class="about-us-2">Our goal is to help you with the most <span class="bold">challenging</span> subjects: Math ➕➖ and Science🧪🔭</p>
             <p class="about-us-3">Did you come to school in the middle of the term and are completely lost? <span class="bold">No problem.</span>That's why we're here.</p>
-            <p class="about-us-4"><span class="bold">Where? </span> Resource Room: Third Floor. </p>
+            <p class="about-us-4"><span class="bold">Where are we located? </span> Resource Room: Third Floor. </p>
         </div>
 
         <!-- What are you waiting for? Join us. -->
