updated names for tutors in index.html

--- a/index.html
+++ b/index.html
@@ -86,11 +86,22 @@
     <!-------------- Tutors  ---------------->
     <section class="tutors" id="tutors">
         <h2>Meet your tutors!</h2>
+
+        <!-- Jolyssa -->
         <div class="tutor">
             <div class="tutor-img">
                 <img src="#" alt="#">
             </div>
-            <h4>Name here.</h4>
+            <h4>Jolyssa Elephant</h4>
+            <p>Description of tutor.</p>
+        </div>
+
+        <!-- Elvin -->
+        <div class="tutor">
+            <div class="tutor-img">
+                <img src="#" alt="#">
+            </div>
+            <h4>Elvin Elephant</h4>
             <p>Description of tutor.</p>
         </div>
 
