last stylings for tutors section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <h4>Jolyssa Elephant</h4>
             <p>
-                Although quiet by nature, she will ensure that she does the best to her ability to get you the help you need.
+                Although quiet by nature, she will ensure that she does the best of her ability to get you the help you need.
             </p>
         </div>
     
@@ -100,7 +100,7 @@
             </div>
             <h4>Elvin Elephant</h4>
             <p>
-                 Proficient in both Math and Science,you are guaranteed to get your questions answered.
+                 Proficient in both Math and Science, you are guaranteed to get your questions answered.
             </p>
         </div>
     </section>
@@ -108,31 +108,32 @@
     <!-------------- Schedule  ---------------->
 
     <section class="schedule">
-        <div class="monday">
+        <h1>Weekly Schedule</h1>
+        <div class="day monday">
             <h3>monday</h3>
             <p>02/19/24</p>
             <span>12pm-5pm</span>
         </div>
 
-        <div class="tuesday">
+        <div class="day tuesday">
             <h3>tueday</h3>
             <p>02/19/24</p>
             <span>12pm-5pm</span>
         </div>
 
-        <div class="wednesday">
+        <div class="day wednesday">
             <h3>wednesday</h3>
             <p>02/19/24</p>
             <span>12pm-5pm</span>
         </div>
 
-        <div class="thursday">
+        <div class="day thursday">
             <h3>thursday</h3>
             <p>02/19/24</p>
             <span>12pm-5pm</span>
         </div>
         
-        <div class="friday">
+        <div class="day friday">
             <h3>friday</h3>
             <p>02/19/24</p>
             <span>12pm-5pm</span>  
