little styling for schedule section, all for right now

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 
     <!-------------- Schedule  ---------------->
 
-    <section class="schedule">
-        <h1>Weekly Schedule</h1>
+    <section class="schedule" id="schedule">
+        <h1>Weekly Schedule:</h1>
         <div class="day monday">
             <h3>monday</h3>
             <p>02/19/24</p>
