added raffle section mostly html

--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
         </section>
     
         <!-------------- Events  ---------------->
+        <section class="raffle">
+            <h2>Here is your challenge of the week!</h2>
+            <img src="attr/math chall.png" alt="">
+
+        </section>
         <section class="events" id="events">
     
             <h1>March 2024</h1>
