scroll animations for weekly schedule

--- a/index.html
+++ b/index.html
@@ -135,16 +135,17 @@
     </section>
 
     <!-------------- Schedule  ---------------->
-    <div class="background-color-container">
-        <div class="color-container schedule-container">
-            <section class="schedule" id="schedule">
-                <h1>Weekly Schedule</h1>
-                <img src="/attr/mar 5-8 schedule.png" alt="picture of elephant thoughts schedule in Mistissini, usually from 10AM-5PM">
+    <div class="item" data-aos="fade-down"  data-aos-duration="1000">
+        <div class="background-color-container">
+            <div class="color-container schedule-container">
+                <section class="schedule" id="schedule">
+                    <h1>Weekly Schedule</h1>
+                    <img src="/attr/mar 5-8 schedule.png" alt="picture of elephant thoughts schedule in Mistissini, usually from 10AM-5PM">
+                </section>
+            </div>
         </div>
     </div>
     
-            <h2>Weekly Events</h2>
-        </section>
     
         <!-------------- Events  ---------------->
         <section class="raffle">
