small styling adjustments

--- a/index.html
+++ b/index.html
@@ -144,16 +144,47 @@
     </div>
     </section>
 
+
+
     <!-------------- Schedule  ---------------->
     <div class="item" data-aos="fade-down" data-aos-duration="1000">
-        <div class="schedule-container">
-            <section class="schedule" id="schedule">
-                <h1>Weekly Schedule</h1>
-                <img src="/attr/mar 5-8 schedule.png"
-                    alt="picture of elephant thoughts schedule in Mistissini, usually from 10AM-5PM">
-            </section>
-        </div>
+        <section class="schedule" id="schedule">
+            <h1>Weekly Schedule</h1>
+            <h4>Check in every week to see when we are available.</h4>
+        
+            <div class="day-of-week monday">
+                <h2>Monday March 11</h2>
+                <h3>PED Day Tutoring</h3>
+                <p>10AM-4PM</p>
+            </div>
+
+            <div class="day-of-week tuesday">
+                <h2>Tuesday March 12</h2>
+                <h3>No School</h3>
+                <p>10AM-4PM</p>
+            </div>
+
+            <div class="day-of-week wednesday">
+                <h2>Wednesday March 13</h2>
+                <h3>PED Day Tutoring</h3>
+                <p>10AM-4PM</p>
+            </div>
+
+            <div class="day-of-week thursday">
+                <h2>Thursday March 14</h2>
+                <h3>PED Day Tutoring</h3>
+                <p>10AM-4PM</p>
+            </div>
+
+            <div class="day-of-week friday">
+                <h2>Friday March 15</h2>
+                <h3>PED Day Tutoring</h3>
+                <p>10AM-4PM</p>
+            </div>
+
+        </section>
     </div>
+
 
 
     <!-------------- Events  ---------------->
