added e.t icon for site

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elephant Thoughts Mistissini</title>
+    <link rel="icon" href="attr/et logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -159,7 +160,7 @@
                     <span>&#127769</span>
                     <h2>Monday March 11</h2>
                     <h3>PED Day Tutoring</h3>
-                    <p>10AM-4PM</p>
+                    <p>11AM-3PM</p>
                 </div>
             </div>
 
