--- a/events.html
+++ b/events.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <a href="index.html"><i class="fa fa-chevron-left" aria-hidden="true" id="back-button"></i></a>
     <!-------------- Events  ---------------->
     <section class="events">
 
@@ -83,8 +84,8 @@
         <div class="upcoming-events">
             <h1>Upcoming Events</h1>
             <div class="up-ev-one">
+                <img src="attr/photo.jpg" alt="" class="up-ev-one-img">
                 <h3>Photo Scavenger Hunt</h3>
-                <img src="#" alt="" class="up-ev-one-img">
                 <p>This is the event that will be coming up soon. Scavenge for photos all around the school!</p>
             </div>
         </div>
