finished challenge of week, student of week and upcoming eventspage

--- a/events.html
+++ b/events.html
@@ -28,13 +28,20 @@
         <!---------- EVENTS: RAFFLE------->
         <!-- Challenges of the Week -->
         <div class="events-raffle">
-            <h2>Here is your challenge of the week!</h2>
-            <img src="attr/math chall.png" alt="">
+            <h1>Here is your challenge of the week!</h1>
+            <figure>
+                <img src="attr/MATH CHALLENGE 2.png" alt="">
+                <figcaption>Ends on March 28th.</figcaption>
+            </figure>
+            
         </div>
 
         <div class="events-raffle">
-            <h2>Here is your the solution for the last challenge!</h2>
-            <img src="attr/math chall.png" alt="">
+            <h1>Here is the solution for the last challenge!</h1>
+            <figure>
+                <img src="attr/MATH CHALL 1 SOL.png" alt="">
+                <figcaption>Ended March 8th.</figcaption>
+            </figure>
         </div>
 
         <!-- Vertical Elipsis -->
@@ -47,7 +54,7 @@
         <div class="color-container">
 
             <!-- Math Student of Week -->
-            <div class="events-raffle events-raffle-winner">
+            <div class="events-raffle-winner">
                 <h2>Math Student of the Week</h2>
 
                 <div class="events-raffle-winner-img">
@@ -62,7 +69,7 @@
 
 
             <!-- Science Student of Week -->
-            <div class="events-raffle events-raffle-winner">
+            <div class="events-raffle-winner">
                 <h2>Science Student of the Week</h2>
 
                 <div class="events-raffle-winner-img">
@@ -88,6 +95,13 @@
                 <h3>Photo Scavenger Hunt</h3>
                 <p>This is the event that will be coming up soon. Scavenge for photos all around the school!</p>
             </div>
+        </div>
+
+        <div class="back-to-homepage">
+            <a href="index.html">
+                <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                <span>Back to Home </span>
+            </a>
         </div>
 
     </section>
