edited photos for students of the week

--- a/events.html
+++ b/events.html
@@ -58,7 +58,7 @@
                 <h2>Math Student of the Week</h2>
 
                 <div class="events-raffle-winner-img">
-                    <img src="attr/elvin grid.png" alt="#">
+                    <img src="attr/math.jpg" alt="#">
                 </div>
 
                 <h3>Everes Gunner</h3>
@@ -73,7 +73,7 @@
                 <h2>Science Student of the Week</h2>
 
                 <div class="events-raffle-winner-img">
-                    <img src="attr/elvin grid.png" alt="#">
+                    <img src="attr/science.jpg" alt="#">
                 </div>
 
                 <h3>Destiny Wapachee</h3>
@@ -93,7 +93,9 @@
             <div class="up-ev-one">
                 <img src="attr/photo.jpg" alt="" class="up-ev-one-img">
                 <h3>Photo Scavenger Hunt</h3>
-                <p>This is the event that will be coming up soon. Scavenge for photos all around the school!</p>
+                <p>There will be things and objects that you can take a photo of. Each photo will be worth a certain number of points. Each thing/object will be ranked as either an easy find, medium find or hard find. The person with the highest amount of points by the end of the allotted time wins!
+                </p>
+                <span>End of Upcoming Events.</span>
             </div>
         </div>
 
