--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                 <p class="about-us-1">We are tutors committed to help Sec 4 and 5's succeed in their studies.</p>
                 <p class="emoji"> 👨🏾‍🎓👩🏾‍🎓</p>
             </div>
+            <div class="img-container">
+                <img src="" alt="">
+            </div>
         </div>
         <!-- SMALL PARAGRAPHS DESCS UNDERNEATH DOTTED LINE -->
 
@@ -158,45 +161,45 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week monday">
                     <span>&#127769</span>
-                    <h2>Monday March 11</h2>
-                    <h3>PED Day Tutoring</h3>
-                    <p>11AM-3PM</p>
-                </div>
-            </div>
-
-            <div class="item" data-aos="fade-down" data-aos-duration="1000">
-                <div class="day-of-week tuesday">
-                    <span>🪐✨</span>
-                    <h2>Tuesday March 12</h2>
+                    <h2>Monday Apr 1</h2>
                     <h3>No School</h3>
                     <p></p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
+                <div class="day-of-week tuesday">
+                    <span>🪐✨</span>
+                    <h2>Tuesday Apr 2</h2>
+                    <h3>Math and Science Tutoring</h3>
+                    <p>10AM-5:30PM</p>
+                </div>
+            </div>
+
+            <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week wednesday">
                     <span>🌑</span>
-                    <h2>Wednesday March 13</h2>
+                    <h2>Wednesday Apr 3</h2>
                     <h3>Math and Science Tutoring</h3>
-                    <p>9AM-5PM</p>
+                    <p>10AM-5:30PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week thursday">
                     <span>🟠</span>
-                    <h2>Thursday March 14</h2>
+                    <h2>Thursday Apr 4</h2>
                     <h3>Math and Science Tutoring</h3>
-                    <p>9AM-5PM</p>
+                    <p>10AM-5:30PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week friday">
                     <span>🔴 &#128149</span>
-                    <h2>Friday March 15</h2>
+                    <h2>Friday Apr 5</h2>
                     <h3>Math and Science Tutoring</h3>
-                    <p>9AM-5PM</p>
+                    <p>10AM-5:30PM</p>
                 </div>
             </div>
 
