updated students of the week

--- a/events.html
+++ b/events.html
@@ -66,9 +66,9 @@
                         <img src="attr/math.jpg" alt="#">
                     </div>
 
-                    <h3>Everes Gunner</h3>
+                    <h3>Gracin Brien</h3>
                     <p>
-                    Congratulations on solving last week's challenge!
+                    Congratulations on coming in and catching up with your Math!
                     </p>
                 </div>
              </div>
@@ -83,7 +83,7 @@
                         <img src="attr/science.jpg" alt="#">
                     </div>
 
-                    <h3>Destiny Wapachee</h3>
+                    <h3>Landen Spencer</h3>
                     <p>
                      Congratulations on coming to Elephant Thoughts and catching up with your Science!
                     </p>
