--- a/index.html
+++ b/index.html
@@ -161,16 +161,17 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week monday">
                     <span>&#127769</span>
-                    <h2>Monday Apr 1</h2>
-                    <h3>No School</h3>
-                    <p></p>
+                    <h2>Monday Apr 8</h2>
+                    <h3>Math and Science Tutoring</h3>
+                    <p>10AM-5:30PM</p>
+                    <p>Eclipse from around 2-4PM!</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week tuesday">
                     <span>🪐✨</span>
-                    <h2>Tuesday Apr 2</h2>
+                    <h2>Tuesday Apr 9</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>10AM-5:30PM</p>
                 </div>
@@ -179,7 +180,7 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week wednesday">
                     <span>🌑</span>
-                    <h2>Wednesday Apr 3</h2>
+                    <h2>Wednesday Apr 10</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>10AM-5:30PM</p>
                 </div>
@@ -188,7 +189,7 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week thursday">
                     <span>🟠</span>
-                    <h2>Thursday Apr 4</h2>
+                    <h2>Thursday Apr 11</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>10AM-5:30PM</p>
                 </div>
@@ -197,7 +198,7 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week friday">
                     <span>🔴 &#128149</span>
-                    <h2>Friday Apr 5</h2>
+                    <h2>Friday Apr 12</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>10AM-5:30PM</p>
                 </div>
