changed sentence for eclipse text

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <h2>Monday Apr 8</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>10AM-5:30PM</p>
-                    <p>Eclipse from around 2-4PM!</p>
+                    <p>There will be eclipse from around 2-4PM!</p>
                 </div>
             </div>
 
