changed challenge of the week, added section for previous winner of last challenge w picture

--- a/events.html
+++ b/events.html
@@ -32,8 +32,8 @@
             <div class="events-raffle">
                 <h1>Here is your challenge of the week!</h1>
                 <figure>
-                    <img src="attr/MATH CHALLENGE 2.png" alt="">
-                    <figcaption>Ends on March 28th.</figcaption>
+                    <img src="attr/math challenge 3.png" alt="">
+                    <figcaption>Ends on April 19th.</figcaption>
                 </figure>
             </div>
         </div>
@@ -42,8 +42,19 @@
             <div class="events-raffle">
                 <h1>Here is the solution for the last challenge!</h1>
                 <figure>
-                    <img src="attr/MATH CHALL 1 SOL.png" alt="">
-                    <figcaption>Ended March 8th.</figcaption>
+                    <img src="attr/science q.png" alt="">
+                    <figcaption>Ended Apr 8th.</figcaption>
+                </figure>
+            </div>
+        </div>
+
+        <div class="item" data-aos="fade-down" data-aos-duration="1000">
+            <div class="events-raffle">
+                <h1>Here is the winner of our last challenge!</h1>
+                <figure>
+                    <img src="attr/math2.jpg" alt="">
+                    <h1>Kayla Shecapio</h1>
+                    <figcaption>Congrats on  answering our challenge correctly and getting chosen in our raffle!</figcaption>
                 </figure>
             </div>
         </div>
