updated schedule for week, added date for upcoming photography event, added date on thurs schedule as well

--- a/events.html
+++ b/events.html
@@ -114,6 +114,7 @@
                 <div class="up-ev-one">
                     <img src="attr/photo.jpg" alt="" class="up-ev-one-img">
                     <h3>Photo Scavenger Hunt</h3>
+                    <h4>Thursday, Apr 18th</h4>
                     <p>
                         There will be things and objects that you can take a photo of. Each photo will be worth a certain
                         number of points. Each thing/object will be ranked as either an easy find, medium find or hard find.
