--- a/index.html
+++ b/index.html
@@ -161,17 +161,16 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week monday">
                     <span>&#127769</span>
-                    <h2>Monday Apr 8</h2>
-                    <h3>Math and Science Tutoring</h3>
-                    <p>10AM-5:30PM</p>
-                    <p>There will be eclipse from around 2-4PM!</p>
+                    <h2>Monday Apr 15</h2>
+                    <h3>PED Day</h3>
+                    <p>Tutoring from 11AM-4PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week tuesday">
                     <span>🪐✨</span>
-                    <h2>Tuesday Apr 9</h2>
+                    <h2>Tuesday Apr 16</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>10AM-5:30PM</p>
                 </div>
@@ -180,7 +179,7 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week wednesday">
                     <span>🌑</span>
-                    <h2>Wednesday Apr 10</h2>
+                    <h2>Wednesday Apr 17</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>10AM-5:30PM</p>
                 </div>
@@ -189,16 +188,17 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week thursday">
                     <span>🟠</span>
-                    <h2>Thursday Apr 11</h2>
+                    <h2>Thursday Apr 18</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>10AM-5:30PM</p>
+                    <p>***Photo Scavenger Hunt After School***</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week friday">
                     <span>🔴 &#128149</span>
-                    <h2>Friday Apr 12</h2>
+                    <h2>Friday Apr 19</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>10AM-5:30PM</p>
                 </div>
