updated schedule for the week, changed events to no upcoming events, style changes for h3 of upcoming events

--- a/events.html
+++ b/events.html
@@ -112,14 +112,8 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <h1>Upcoming Events</h1>
                 <div class="up-ev-one">
-                    <img src="attr/photo.jpg" alt="" class="up-ev-one-img">
-                    <h3>Photo Scavenger Hunt</h3>
-                    <h4>Thursday, Apr 18th</h4>
-                    <p>
-                        There will be things and objects that you can take a photo of. Each photo will be worth a certain
-                        number of points. Each thing/object will be ranked as either an easy find, medium find or hard find.
-                        The person with the highest amount of points by the end of the allotted time wins!
-                    </p>
+                    <img src="attr/sad face.jpg" alt="" class="up-ev-one-img">
+                    <h3>There are no upcoming events at this time.</h3>
                     <span>End of Upcoming Events.</span>
                 </div>
             </div>
