--- a/index.html
+++ b/index.html
@@ -161,16 +161,16 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week monday">
                     <span>&#127769</span>
-                    <h2>Monday Apr 15</h2>
-                    <h3>PED Day</h3>
-                    <p>Tutoring from 11AM-4PM</p>
+                    <h2>Monday Apr 22</h2>
+                    <h3>Math and Science Tutoring</h3>
+                    <p>10AM-5:30PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week tuesday">
                     <span>🪐✨</span>
-                    <h2>Tuesday Apr 16</h2>
+                    <h2>Tuesday Apr 23</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>10AM-5:30PM</p>
                 </div>
@@ -179,7 +179,7 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week wednesday">
                     <span>🌑</span>
-                    <h2>Wednesday Apr 17</h2>
+                    <h2>Wednesday Apr 24</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>10AM-5:30PM</p>
                 </div>
@@ -188,19 +188,18 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week thursday">
                     <span>🟠</span>
-                    <h2>Thursday Apr 18</h2>
-                    <h3>Math and Science Tutoring</h3>
-                    <p>10AM-5:30PM</p>
-                    <p>***Photo Scavenger Hunt After School***</p>
+                    <h2>Thursday Apr 25</h2>
+                    <h3>Gone for Goose Break</h3>
+                    <p>No tutoring.</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week friday">
                     <span>🔴 &#128149</span>
-                    <h2>Friday Apr 19</h2>
-                    <h3>Math and Science Tutoring</h3>
-                    <p>10AM-5:30PM</p>
+                    <h2>Friday Apr 26</h2>
+                    <h3>Gone for Goose Break</h3>
+                    <p>No tutoring.</p>
                 </div>
             </div>
 
