changed challenge of week, last challenge, and updated the winner for the week

--- a/events.html
+++ b/events.html
@@ -32,8 +32,8 @@
             <div class="events-raffle">
                 <h1>Here is your challenge of the week!</h1>
                 <figure>
-                    <img src="attr/math challenge 3.png" alt="">
-                    <figcaption>Ends on April 19th.</figcaption>
+                    <img src="attr/sad face.jpg" alt="">
+                    <figcaption>No challenges until after Goose Break!</figcaption>
                 </figure>
             </div>
         </div>
@@ -42,8 +42,8 @@
             <div class="events-raffle">
                 <h1>Here is the solution for the last challenge!</h1>
                 <figure>
-                    <img src="attr/science q.png" alt="">
-                    <figcaption>Ended Apr 8th.</figcaption>
+                    <img src="attr/mth chall 3 solution.png" alt="">
+                    <figcaption>Ended Apr 19th.</figcaption>
                 </figure>
             </div>
         </div>
@@ -53,7 +53,7 @@
                 <h1>Here is the winner of our last challenge!</h1>
                 <figure>
                     <img src="attr/math2.jpg" alt="">
-                    <h1>Kayla Shecapio</h1>
+                    <h1>Ed Linton</h1>
                     <figcaption>Congrats on  answering our challenge correctly and getting chosen in our raffle!</figcaption>
                 </figure>
             </div>
