updated schedule of the week

--- a/index.html
+++ b/index.html
@@ -161,45 +161,45 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week monday">
                     <span>&#127769</span>
-                    <h2>Monday May 6</h2>
-                    <h3>Gone for Goose Break</h3>
-                    <p>No tutoring.</p>
+                    <h2>Monday May 13</h2>
+                    <h3>Math and Science Tutoring</h3>
+                    <p>9AM-5PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week tuesday">
                     <span>🪐✨</span>
-                    <h2>Tuesday May 7</h2>
-                    <h3>Gone for Goose Break</h3>
-                    <p>No tutoring.</p>
+                    <h2>Tuesday May 14</h2>
+                    <h3>Math and Science Tutoring</h3>
+                    <p>10AM-6PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week wednesday">
                     <span>🌑</span>
-                    <h2>Wednesday May 8</h2>
-                    <h3>Gone for Goose Break</h3>
-                    <p>No tutoring.</p>
+                    <h2>Wednesday May 15</h2>
+                    <h3>Math and Science Tutoring</h3>
+                    <p>10AM-6PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week thursday">
                     <span>🟠</span>
-                    <h2>Thursday May 9</h2>
-                    <h3>Gone for Goose Break</h3>
-                    <p>No tutoring.</p>
+                    <h2>Thursday May 16</h2>
+                    <h3>Math and Science Tutoring</h3>
+                    <p>10AM-6PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week friday">
                     <span>🔴 &#128149</span>
-                    <h2>Friday May 10</h2>
-                    <h3>Gone for Goose Break</h3>
-                    <p>No tutoring.</p>
+                    <h2>Friday May 17</h2>
+                    <h3>Math and Science Tutoring</h3>
+                    <p>10AM-6PM</p>
                 </div>
             </div>
 
