updated schedule for the week

--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
                     </p>
                 </div>
             </div>
+
+            
+        </section>
     </div>
     </section>
 
@@ -161,45 +164,54 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week monday">
                     <span>&#127769</span>
-                    <h2>Monday May 13</h2>
-                    <h3>Math and Science Tutoring</h3>
-                    <p>9AM-5PM</p>
+                    <h2>Monday May 20</h2>
+                    <h3>No School: Holiday</h3>
+                    <p></p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week tuesday">
                     <span>🪐✨</span>
-                    <h2>Tuesday May 14</h2>
+                    <h2>Tuesday May 21</h2>
                     <h3>Math and Science Tutoring</h3>
-                    <p>10AM-6PM</p>
+                    <p>9:30AM-6PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week wednesday">
                     <span>🌑</span>
-                    <h2>Wednesday May 15</h2>
+                    <h2>Wednesday May 22</h2>
                     <h3>Math and Science Tutoring</h3>
-                    <p>10AM-6PM</p>
+                    <p>9:30AM-6PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week thursday">
                     <span>🟠</span>
-                    <h2>Thursday May 16</h2>
+                    <h2>Thursday May 23</h2>
                     <h3>Math and Science Tutoring</h3>
-                    <p>10AM-6PM</p>
+                    <p>9:30AM-6PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week friday">
                     <span>🔴 &#128149</span>
-                    <h2>Friday May 17</h2>
+                    <h2>Friday May 24</h2>
                     <h3>Math and Science Tutoring</h3>
-                    <p>10AM-6PM</p>
+                    <p>9:30AM-6PM</p>
+                </div>
+            </div>
+
+            <div class="item" data-aos="fade-down" data-aos-duration="1000">
+                <div class="day-of-week saturday">
+                    <span>🔴 &#128149</span>
+                    <h2>Saturday May 25</h2>
+                    <h3>Math and Science Tutoring</h3>
+                    <p>9:30AM-6PM</p>
                 </div>
             </div>
 
