added teshi and lisa to website with their blurb

--- a/index.html
+++ b/index.html
@@ -145,7 +145,35 @@
                     </p>
                 </div>
             </div>
+            <!-- Teshi -->
+            <div class="tutor">
+                <div class="item" data-aos="fade-down" data-aos-duration="1000">
+                    <div class="tutor-img">
+                        <img src="attr/teshi grid.png" alt="#">
+                    </div>
+                </div>
+                <div class="item" data-aos="fade-down" data-aos-duration="1000">
+                    <h3>Teshi Elephant</h3>
+                    <p>
+                        Passionate about Science and Math, and excited to give you the help you need!
+                    </p>
+                </div>
+            </div>
 
+            <!-- Lisa -->
+            <div class="tutor">
+                <div class="item" data-aos="fade-down" data-aos-duration="1000">
+                    <div class="tutor-img">
+                        <img src="attr/lisa grid.png" alt="#">
+                    </div>
+                </div>
+                <div class="item" data-aos="fade-down" data-aos-duration="1000">
+                    <h3>Lisa Elephant</h3>
+                    <p>
+                        It's okay if you can't figure it out, we can figure it out together.
+                    </p>
+                </div>
+            </div>
             
         </section>
     </div>
