updated emojis so theres four of us :3

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
             </div>
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <p class="about-us-1">We are tutors committed to help Sec 4 and 5's succeed in their studies.</p>
-                <p class="emoji"> 👨🏾‍🎓👩🏾‍🎓</p>
+                <p class="emoji"> 👩🏾‍🎓👨🏾‍🎓</p>
+                <p class="emoji">👩🏾‍🎓👩🏾‍🎓</p>
             </div>
             <div class="img-container">
                 <img src="" alt="">
