changed sched for saturday

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <p class="about-us-1">We are tutors committed to help Sec 4 and 5's succeed in their studies.</p>
-                <p class="emoji"> 👩🏾‍🎓👨🏾‍🎓</p>
+                <p class="emoji"> 👩🏾‍🎓👨🏾‍🎓git add </p>
                 <p class="emoji">👩🏾‍🎓👩🏾‍🎓</p>
             </div>
             <div class="img-container">
@@ -240,7 +240,7 @@
                     <span>🔴 &#128149</span>
                     <h2>Saturday May 25</h2>
                     <h3>Math and Science Tutoring</h3>
-                    <p>9:30AM-6PM</p>
+                    <p>11AM-3PM</p>
                 </div>
             </div>
 
