added teshi and lisa to socials page

--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                 </div>
             </div>
 
+            <!-- Jolyssa -->
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="socials-individual socials-individual-1">
                     <h3>Jolyssa</h3>
@@ -275,6 +276,8 @@
                 </div>
             </div>
 
+            <!-- Elvin -->
+
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="socials-individual socials-individual-2">
                     <h3>Elvin</h3>
@@ -287,6 +290,42 @@
                     <div class="email">
                         <i class="fa fa-envelope fa-2x" aria-hidden="true" href="""></i>
                             <span><a href=" mailto:elvin.elephantthoughts@gmail.com">E-mail</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Teshi -->
+
+            <div class="item" data-aos="fade-down" data-aos-duration="1000">
+                <div class="socials-individual socials-individual-1">
+                    <h3>Teshi</h3>
+                    <div class="facebook">
+                        <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+                        <span><a href="https://www.facebook.com/profile.php?id=61559770284781"
+                                target="_blank">Facebook</a></span>
+                    </div>
+
+                    <div class="email">
+                        <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+                        <span><a href="mailto:teshibk@gmail.com">E-mail</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Lisa -->
+
+            <div class="item" data-aos="fade-down" data-aos-duration="1000">
+                <div class="socials-individual socials-individual-2">
+                    <h3>Lisa</h3>
+                    <div class="facebook">
+                        <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+                        <span><a href="https://www.facebook.com/lisaelefant"
+                                target="_blank">Facebook</a></span>
+                    </div>
+
+                    <div class="email">
+                        <i class="fa fa-envelope fa-2x" aria-hidden="true" href="""></i>
+                            <span><a href=" mailto:lisanwaribe@gmail.com">E-mail</a></span>
                     </div>
                 </div>
             </div>
