updated schedule, updated events for the week

--- a/events.html
+++ b/events.html
@@ -32,8 +32,8 @@
             <div class="events-raffle">
                 <h1>Here is your challenge of the week!</h1>
                 <figure>
-                    <img src="attr/sad face.jpg" alt="">
-                    <figcaption>No challenges until after Goose Break!</figcaption>
+                    <img src="attr/science chal 2.png" alt="">
+                    <figcaption>Challenge ends May 31</figcaption>
                 </figure>
             </div>
         </div>
@@ -112,8 +112,9 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <h1>Upcoming Events</h1>
                 <div class="up-ev-one">
-                    <img src="attr/sad face.jpg" alt="" class="up-ev-one-img">
-                    <h3>There are no upcoming events at this time.</h3>
+                    <h3>Meals Twice a Week</h3>
+                    <img src="attr/chicken wrap.jpg" alt="" class="up-ev-one-img">
+                    <h4>This week we will be having chicken wraps on Wednesday after school!</h4>
                     <span>End of Upcoming Events.</span>
                 </div>
             </div>
