--- a/index.html
+++ b/index.html
@@ -193,16 +193,16 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week monday">
                     <span>&#127769</span>
-                    <h2>Monday May 20</h2>
-                    <h3>No School: Holiday</h3>
-                    <p></p>
+                    <h2>Monday May 27</h2>
+                    <h3>Math and Science Tutoring</h3>
+                    <p>9:30AM-6PM</p>
                 </div>
             </div>
 
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week tuesday">
                     <span>🪐✨</span>
-                    <h2>Tuesday May 21</h2>
+                    <h2>Tuesday May 28</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>9:30AM-6PM</p>
                 </div>
@@ -211,7 +211,7 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week wednesday">
                     <span>🌑</span>
-                    <h2>Wednesday May 22</h2>
+                    <h2>Wednesday May 29</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>9:30AM-6PM</p>
                 </div>
@@ -220,7 +220,7 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week thursday">
                     <span>🟠</span>
-                    <h2>Thursday May 23</h2>
+                    <h2>Thursday May 30</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>9:30AM-6PM</p>
                 </div>
@@ -229,7 +229,7 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week friday">
                     <span>🔴 &#128149</span>
-                    <h2>Friday May 24</h2>
+                    <h2>Friday May 31</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>9:30AM-6PM</p>
                 </div>
@@ -238,7 +238,7 @@
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="day-of-week saturday">
                     <span>🔴 &#128149</span>
-                    <h2>Saturday May 25</h2>
+                    <h2>Saturday June 1</h2>
                     <h3>Math and Science Tutoring</h3>
                     <p>11AM-3PM</p>
                 </div>
@@ -322,7 +322,7 @@
                         <span><a href="https://www.facebook.com/lisaelefant"
                                 target="_blank">Facebook</a></span>
                     </div>
-
+                    
                     <div class="email">
                         <i class="fa fa-envelope fa-2x" aria-hidden="true" href="""></i>
                             <span><a href=" mailto:lisanwaribe@gmail.com">E-mail</a></span>
